Ultimos arreglos, Privacidad, Aviso Legal y Cookies

--- a/Libreria/core/templates/core/base.html
+++ b/Libreria/core/templates/core/base.html
@@ -152,9 +152,9 @@
         </a>
       </p>
       <p class="m-0 mbt">
-        <a href="sample.html" class="link">Política de privacidad</a> ·
-        <a href="sample.html" class="link">Aviso legal</a> ·
-        <a href="sample.html" class="link">Cookies</a>
+        <a href="{% url 'core:privacidad' %}"" class="link">Política de privacidad</a> ·
+        <a href="{% url 'core:aviso' %}" class="link">Aviso legal</a> ·
+        <a href="{% url 'core:cookie' %}"" class="link">Cookies</a>
       </p>
       <p class="m-0 mbt1">&copy; Librería 2025</p>
     </div>
