--- a/Libreria/critica/templates/critica/confirmar_borrar.html
+++ b/Libreria/critica/templates/critica/confirmar_borrar.html
@@ -78,6 +78,10 @@
   }
 </style>
 
+
+{% if user.is_authenticated %}
+  
+
 <div class="container-confirm">
   {# ⚠️ Mensaje de advertencia: acción irreversible #}
   <h1>¿Estás seguro de borrar esta crítica?</h1>
@@ -92,5 +96,9 @@
     <a href="{% url 'critica:critica' %}" class="button-cancel">Cancelar</a>
   </form>
 </div>
+
+{% else %}
+  <p>Inicia sesión para borrar el libro.</p>
+{% endif %}
 
 {% endblock %}
