--- a/Libreria/libros/templates/libros/confirmar_borrar.html
+++ b/Libreria/libros/templates/libros/confirmar_borrar.html
@@ -77,6 +77,9 @@
   }
 </style>
 
+
+{% if user.is_authenticated %}
+
 <!-- ⚠️ Pantalla de confirmación antes de borrar un libro -->
 <div class="container-confirm">
   <h1>¿Estás seguro de borrar esta crítica?</h1>
@@ -89,5 +92,9 @@
     <a href="{% url 'libro:libros' %}" class="button-cancel">Cancelar</a>
   </form>
 </div>
+
+{% else %}
+  <p>Inicia sesión para borrar tus libros.</p>
+{% endif %}
 
 {% endblock %}
